# CSC8508_project

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CSC8503.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.github/workflows/: ci.yml
Assets/Data/: Map1Navigation  Map1Navmesh  Map3.msh  Map4.msh  SampleMapNavigation  TestGrid2.txt  TestGrid4.txt
Assets/Json/: Lvl1.json  Lvl2.json  output_data.json  save.json
Assets/Meshes/: BigCube.msh  BigCylinder.mat  BigCylinder.msh  Bridge.mat  Bridge.msh  BridgeRail.mat  BridgeRail.msh  ColumnsM2.mat  ColumnsM2.msh  Cylinders.msh  DoorWay.mat  DoorWay.msh  DoorWayM2.mat  DoorWayM2.msh  ElevRail.msh  Elevation.mat  Elevation.msh  EmptyMap.mat  EmptyMap.msh  FloorM2.msh  MAIN map.mat  MAIN map.msh  MIdDoor.mat  MIdDoor.msh  MainWall.msh  MainWallM2.mat  MainWallM2.msh  Map1Floor.msh  MidRail.mat  MidRail.msh  MidTunnel.msh  OpenWall.mat  OpenWall.msh  OppDoorWay.msh  OppDoorWayM2.mat  OppDoorWayM2.msh  SampleMap.msh  SampleMap2.msh  Second Map 1.mat  Second Map 1.msh  (+10 more)
Assets/Shaders/: anim.frag  anim.vert  scene.frag  scene.vert  shadow.vert
Assets/Sounds/Banks/: BGM.bank  Congzheng.bank  Effect.bank  Felicia.bank  Lin.bank  Master.bank  Master.strings.bank
CSC8503/: AudioSystem.cpp  AudioSystem.h  BTNode.h  BTSelector.h  BTSequence.h  BulletContactListener.cpp  BulletContactListener.h  BulletPool.h  CMakeLists.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  CharacterController.cpp  CharacterController.h  Console.cpp  Console.h  Enemy.cpp  Enemy.h  EnemyFactory.h  EventManager.cpp  EventManager.h  GameManager.cpp  GameManager.h  GameObjectFreeList.cpp  GameObjectFreeList.h  GameTechRenderer.cpp  GameTechRenderer.h  ISaveable.cpp  ISaveable.h  InputManager.cpp  InputManager.h  Light.h  Main.cpp  Main.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  NormalEnemy.h  PaintballAudioObject.cpp  PaintballAudioObject.h  (+35 more)
CSC8503/CSC8503.dir/Debug/: BTSequence.h.ifc  BTSequence.h.ifc.d.json  BTSequence.h_35205B9DC7060EE5.ifc.dt.module.json  BTSequence.h_35205B9DC7060EE5.ifc.dt.module.json.command  CSC8503.exe.recipe  btsequence.h.module.json  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
CSC8503/CSC8503.dir/Debug/CSC8503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSC8503/CSC8503.dir/Debug/CSC8503_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
CSC8503CoreClasses/: CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CollisionDetection.cpp  Constraint.h  Debug.cpp  Debug.h  GameClient.cpp  GameObject.h  GameServer.cpp  GameWorld.cpp  GameWorld.h  NavigationMesh.cpp  NavigationMesh.h  NavigationPath.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  PhysicsObject.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PushdownMachine.cpp  PushdownMachine.h  PushdownState.h  QuadTree.h  Ray.h  State.h  cmake_install.cmake
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/: CSC8503CoreClasses.lib.recipe
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.13E80AD0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503CoreClasses.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.212CA84B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503CoreClasses.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.31A09A5C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.3EFC8445.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CSC8503CoreClasses/CSC8503CoreClasses.dir/Debug/CSC8503C.453212CD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+4 more)
CSC8503CoreClasses/enet/: enet.h  win32.h
NCLCoreClasses/: Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Keyboard.cpp  Mesh.h  MeshMaterial.h  Mouse.cpp  SimpleFont.cpp  Texture.h  Vector.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
OpenGLRendering/: OGLComputeShader.h  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.h  OGLTexture.h  OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
OpenGLRendering/Debug/: OpenGLRendering.lib
OpenGLRendering/OpenGLRendering.dir/Debug/: OpenGLRendering.lib.recipe
ReactPhysics3D.dir/Debug/: ReactPhysics3D.lib.recipe
ReactPhysics3D.dir/Debug/ReactPhysics3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SDK/RmlUi/lib/: rmlui.lib  rmlui_debugger.lib
SDK/imgui/: imgui_draw.cpp
SDK/imgui/backends/: imgui_impl_opengl3.h
SDK/nlohmannjson-json/: nlohmann_json.pc
imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+167 files in other folders)
